// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: Tabs -  props mode is one of our breakpoints (xs, sm, md... ) 1`] = `
<div
  className="tabs tabs-scroll-auto"
>
  

  <ul>
    <li
      className={null}
      key="tab-item-test-0"
    >
      

      <a
        href="#"
        onClick={[Function]}
      >
        test
      </a>
      

    </li>
    <li
      className="active"
      key="tab-item-test 2-1"
    >
      

      <a
        href="#"
        onClick={[Function]}
      >
        test 2
      </a>
      

    </li>
  </ul>
</div>
`;

exports[`Component: Tabs -  renders 1`] = `
<div
  className="tabs"
>
  

  <ul>
    <li
      className={null}
      key="tab-item-test-0"
    >
      

      <a
        href="#"
        onClick={[Function]}
      >
        test
      </a>
      

    </li>
    <li
      className="active"
      key="tab-item-test 2-1"
    >
      

      <a
        href="#"
        onClick={[Function]}
      >
        test 2
      </a>
      

    </li>
  </ul>
</div>
`;

exports[`Component: Tabs -  renders with class name tabs when prop mode is not specified 1`] = `
<div
  className="tabs"
>
  

  <ul>
    <li
      className={null}
      key="tab-item-test-0"
    >
      

      <a
        href="#"
        onClick={[Function]}
      >
        test
      </a>
      

    </li>
    <li
      className="active"
      key="tab-item-test 2-1"
    >
      

      <a
        href="#"
        onClick={[Function]}
      >
        test 2
      </a>
      

    </li>
  </ul>
</div>
`;
